<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomConfigurationFragment"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/environmentTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/environment"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent">

        <AutoCompleteTextView
            android:id="@+id/environmentAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brandIdTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_id"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/channelIdTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channel_id"
        android:layout_margin="20dp"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/useDefaultConfigurationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_a_default_configuration"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textColor="@color/blue_text"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:backgroundTint="@color/blue_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>